<resources>
    <string name="app_name">Мое приложение</string>
    <string name="title_activity_main3">Main3Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="go_to_activity_1">Go to Activity 1</string>
    <string name="go_to_activity_3">Go to Activity 3</string>
    <string name="go_to_activity_4">Go to activity 4</string>
    <string name="go_to_activity_5">Go to Activity 5</string>
    <string name="go_to_activity_2">Go to Activity 2</string>
    <string name="go_to_activity_6">Go to Activity 6</string>
    <string name="go_to_activity_7">Go to Activity 7</string>
    <string name="_1_activity">Вы на 1 Activity</string>
    <string name="_2_activity">Вы на 2 Activity</string>
    <string name="_3_activity">Вы на 3 Activity</string>
    <string name="_4_activity">Вы на 4 Activity</string>
    <string name="_5_activity">Вы на 5 Activity</string>
    <string name="_6_activity">Вы на 6 Activity</string>
    <string name="text_1">текст_1</string>
    <string name="photo_4">фото 4</string>
    <string name="photo_5">фото 5</string>
    <string name="photo_6">фото 6</string>
    <string name="photo_3">фото 3</string>
    <string name="photo_2">фото 2</string>
    <string name="photo_1">фото 1</string>
    <string name="photo_kiten">фото кошка</string>
    <string name="vodopad">фото водопад</string>
    <string name="vodopad_2">волопад 2</string>
    <string name="bozie_korova">божья коровка</string>
    <string name="gori">горы</string>
    <string name="ozero">фото озеро</string>
</resources>
