<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/photo_1"
            android:scaleType="centerCrop"
            android:src="@drawable/kiten" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:text="@string/photo_kiten" />

        <TextView
            style="@style/textStyle"
            android:gravity="center"
            android:text="@string/_1_activity">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnActivityOneGo_Two"
            style="@style/ButtonGo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_shadow"
            android:elevation="10dp"
            android:text="@string/go_to_activity_2">

        </Button>

        <Button
            android:id="@+id/btnActivityOneGo_Free"
            style="@style/ButtonGo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/go_to_activity_2" />

        <Button
            android:id="@+id/btnActivityOneGo_Fore"
            style="@style/ButtonGo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/go_to_activity_3" />

        <Button
            android:id="@+id/btnActivityOneGo_Five"
            style="@style/ButtonGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/go_to_activity_4" />

        <Button
            android:id="@+id/btnActivityOneGo_Six"
            style="@style/ButtonGo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/go_to_activity_5" />

        <Button
            android:id="@+id/btnActivityOneGo_Seven"
            style="@style/ButtonGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/go_to_activity_6" />

    </LinearLayout>

</LinearLayout>